<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.codepoison.instagramclone.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.codepoison.instagramclone.ui.dashboard.DashboardFragment"
        android:label="@string/Search"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.codepoison.instagramclone.ui.notifications.NotificationsFragment"
        android:label="@string/gallery"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/heart"
        android:name="com.codepoison.instagramclone.ui.heart.Heart"
        android:label="Heart"
        tools:layout="@layout/heart_fragment" />

    <fragment
        android:id="@+id/profile"
        android:name="com.codepoison.instagramclone.ui.profile.Profile"
        android:label="@string/Profile"
        tools:layout="@layout/profile_fragment" />



</navigation>
