<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:elevation="6dp"

        tools:targetApi="lollipop">

        <LinearLayout

            android:id="@+id/liner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imagecamera"
                android:layout_width="31dp"
                android:layout_height="38dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/imagec"
                app:srcCompat="@drawable/camera" />

            <TextView
                android:id="@+id/textinsta"
                android:layout_width="150dp"
                android:layout_height="43dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:text="@string/instagram"
                android:textColor="#020202"
                android:textSize="35sp"
                app:fontFamily="@font/bilbo_swash_caps"
                android:layout_marginStart="10dp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="43dp"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:contentDescription="@string/Profile"
                app:srcCompat="@drawable/send"
                android:layout_marginStart="150dp"
                android:layout_marginEnd="50dp" />


        </LinearLayout>


    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu">


    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <fragment
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/nav_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:navGraph="@navigation/mobile_navigation" />

</RelativeLayout>

